Refonte pour SOLID + base pour factory