@@ -7,13 +7,10 @@ import java.nio.file.Path;
 public class FileManager {
 
     public static String readFileContent(Path filePath) throws IOException {
-        if (Files.exists(filePath)) {
-            return Files.readString(filePath);
-        }
-        return "";
+        return Files.exists(filePath) ? new String(Files.readAllBytes(filePath)) : "";
     }
 
     public static void writeFileContent(Path filePath, String content) throws IOException {
-        Files.writeString(filePath, content);
+        Files.write(filePath, content.getBytes());
     }
 }
