@@ -2,6 +2,7 @@ package com.fges.todoapp.e2e;
 
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fges.todoapp.App;
 import org.junit.After;
 import org.junit.Assert;
 import org.junit.Test;
@@ -15,34 +16,59 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RunWith(Parameterized.class)
 public class GhostTests {
 
-    private static final String TP_NAME = "tp1";
+    /**
+     * Version of the TP to use with the API, refer to the TP name on the slides!!
+     */
+    private static final String TP_NAME = "tp2";
+
+    /**
+     * Should not change
+     */
     private static final String API_ENDPOINT = "https://testcase-api.jho.ovh";
 
+    /**
+     * Represents a sequence of command execution and their results.
+     * Stdout is used to compare results, that's why the
+     *
+     * @param sequence List of arguments of the commands to execute. Example:<br>
+     *                 {"insert", "-s", "source.json", "Hello World"},<br>
+     *                 {"insert", "-s", "source.json", "Bye"},<br>
+     *                 {"list", "-s", "source.json"},
+     * @param stdoutLines List of lines in the stdout
+     * @param exitCode Exit code of the program
+     */
     public record ExecOutput(List<List<String>> sequence, List<String> stdoutLines, int exitCode) {
     }
 
+    // Execution output used for the test
     private final ExecOutput execOutput;
 
     public GhostTests(ExecOutput execOutput) {
         this.execOutput = execOutput;
     }
 
+    /**
+     * Remove if you want to keep temporary test files
+     */
     @After
     public void after() {
         deleteTmpFiles();
     }
 
+    /**
+     * The test
+     * @throws Exception Any exception, it's ok to not handle them in tests because
+     */
     @Test
-    public void ghostTest() throws Exception {
+    public void ghostTest() throws Exception{
         Assert.assertEquals(this.execOutput, runMain(this.execOutput.sequence));
     }
 
-    private ExecOutput runMain(List<List<String>> sequence) throws IOException {
+    private ExecOutput runMain(List<List<String>> sequence) throws Exception {
         var out = System.out;
         ByteArrayOutputStream sout = new ByteArrayOutputStream();
         System.setOut(new PrintStream(sout));
@@ -50,18 +76,17 @@ public class GhostTests {
         int exitOutput = 0;
 
         for (var args: sequence) {
-            exitOutput = CommandInterface.execute(args.toArray(new String[0]));
+            exitOutput = App.exec(args.toArray(new String[0]));
         }
 
         System.setOut(out);
 
         return new ExecOutput(
                 sequence,
-                Arrays.stream(sout.toString().split("\n")).map(String::trim).collect(Collectors.toList()),
+                Arrays.stream(sout.toString().split("\n")).map(String::trim).toList(),
                 exitOutput
         );
     }
-
 
     private static List<ExecOutput> getApiExecOutput(String tpName) throws IOException {
         URL url = new URL(API_ENDPOINT + "/tp?tpName=" + tpName);
@@ -77,10 +102,14 @@ public class GhostTests {
 
             ObjectMapper mapper = new ObjectMapper();
 
-            return mapper.readValue(response.toString(), new TypeReference<>() {});
+            return mapper.readValue(response.toString(), new TypeReference<>() {
+            });
         }
     }
 
+    /**
+     * The API gives sequences of code that uses the
+     */
     private void deleteTmpFiles() {
         File directory = Paths.get(System.getProperty("user.dir")).toFile();
         var files = directory.listFiles();
@@ -95,7 +124,6 @@ public class GhostTests {
         }
     }
 
-
     @Parameterized.Parameters
     public static List<Object[]> data() throws Exception {
         var output = getApiExecOutput(TP_NAME);
@@ -104,4 +132,6 @@ public class GhostTests {
                 o -> new Object[]{o}
         ).toList();
     }
+
+
 }
